fixed old js alghorithm

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <title>$Title$</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.3/require.min.js"></script>
-    <script src="dist/app.js"></script>
+    <!--<script src="dist/app.js"></script>-->
+    <script src="index.js"></script>
     <style>
         div.person {
             display: inline-block;
